Based on the changes in the diff, here is a concise commit message:
Refactor: enforce HTTPS for presigned URLs in PresignedUrlImpl

- Update `PresignedUrlImpl` to replace `http://` with `https://` in the generated presigned URL string to ensure secure communication.